--- a/analytics-ui/.eslintrc.json
+++ b/analytics-ui/.eslintrc.json
@@ -31,7 +31,7 @@
     }
   ],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "off",
     "@next/next/no-html-link-for-pages": "off",
     "react/display-name": 0,
     "react/no-unescaped-entities": 0,
