--- a/analytics-ui/package.json
+++ b/analytics-ui/package.json
@@ -27,6 +27,7 @@
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
+    "lucide-react": "^0.552.0",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "14.2.32",
