--- a/docker-compose-demo.yaml
+++ b/docker-compose-demo.yaml
@@ -7,46 +7,46 @@ networks:
     driver: bridge
 
 services:
-  bootstrap:
-    build:
-      context: ./docker/bootstrap
-      dockerfile: Dockerfile
-    image: analytics-bootstrap:local
-    restart: on-failure
-    platform: linux/amd64
-    environment:
-      DATA_PATH: /app/data
-    volumes:
-      - data:/app/data
-    command: /bin/sh /app/init.sh
+  # bootstrap:
+  #   build:
+  #     context: ./docker/bootstrap
+  #     dockerfile: Dockerfile
+  #   image: analytics-bootstrap:local
+  #   restart: on-failure
+  #   platform: linux/amd64
+  #   environment:
+  #     DATA_PATH: /app/data
+  #   volumes:
+  #     - data:/app/data
+  #   command: /bin/sh /app/init.sh
 
-  wren-engine:
-    image: ghcr.io/canner/wren-engine:0.18.3
-    restart: on-failure
-    platform: linux/amd64
-    expose:
-      - 8080
-      - 7432
-    volumes:
-      - data:/usr/src/app/etc
-      - ./data:/usr/src/app/data
-    networks:
-      - wren
-    depends_on:
-      - bootstrap
+  # wren-engine:
+  #   image: ghcr.io/canner/wren-engine:0.18.3
+  #   restart: on-failure
+  #   platform: linux/amd64
+  #   expose:
+  #     - 8080
+  #     - 7432
+  #   volumes:
+  #     - data:/usr/src/app/etc
+  #     - ./data:/usr/src/app/data
+  #   networks:
+  #     - wren
+  #   depends_on:
+  #     - bootstrap
 
-  ibis-server:
-    image: ghcr.io/canner/wren-engine-ibis:0.18.3
-    restart: on-failure
-    platform: linux/amd64
-    expose:
-      - 8000
-    environment:
-      WREN_ENGINE_ENDPOINT: http://wren-engine:8080
-    volumes:
-      - .:/usr/src/app/data
-    networks:
-      - wren
+  # ibis-server:
+  #   image: ghcr.io/canner/wren-engine-ibis:0.18.3
+  #   restart: on-failure
+  #   platform: linux/amd64
+  #   expose:
+  #     - 8000
+  #   environment:
+  #     WREN_ENGINE_ENDPOINT: http://wren-engine:8080
+  #   volumes:
+  #     - .:/usr/src/app/data
+  #   networks:
+  #     - wren
 
   analytics-service:
     # Build from local source instead of using online image
@@ -112,9 +112,9 @@ services:
     environment:
       DB_TYPE: sqlite
       SQLITE_FILE: /app/data/db.sqlite3
-      ANALYTICS_ENGINE_ENDPOINT: http://wren-engine:8080
+      ANALYTICS_ENGINE_ENDPOINT: http://192.168.18.118:8080
       ANALYTICS_AI_ENDPOINT: http://analytics-service:5555
-      IBIS_SERVER_ENDPOINT: http://ibis-server:8000
+      IBIS_SERVER_ENDPOINT: http://192.168.18.118:8000
       GENERATION_MODEL: gpt-4o-mini
       WREN_ENGINE_PORT: 8080
       WREN_AI_SERVICE_VERSION: 0.27.1
@@ -133,4 +133,4 @@ services:
       - wren
     depends_on:
       - analytics-service
-      - wren-engine
+      # - wren-engine
